<resources>
    <string name="app_name">yowbow</string>

    <string name="main_activity">start MainActivity</string>
    <string name="top_activity">start TopActivity</string>

    <string name="action_settings">Settings</string>

    <string name="top_button_1">yowbow add</string>
    <string name="top_button_2">yowbow view</string>
    <string name="add_button_1">back to top</string>
    <string name="add_button_2">yowbow submit</string>
    <string name="result_button_1">back to top</string>


    <string name="demand_add_item">商品名 or サービス名を記入</string>
    <string name="demand_add_content">要望を記入</string>


    <string name="title_activity_home_view">HomeViewActivity</string>
    <string name="title_activity_demand_add">DemandAddActivity</string>
    <string name="title_activity_demand_result">DemandResultActivity</string>
    <string name="title_activity_demand_view">DemandViewActivity</string>
</resources>
